--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
-                             http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                             https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+         version="6.0">
 
   <display-name>Auction Backend</display-name>
 
@@ -14,54 +14,24 @@
     </cookie-config>
   </session-config>
 
-  <!-- Filters -->
+  <!-- Optional CORS filter. Create class auction.filters.CorsFilter first, or remove this block. -->
   <filter>
     <filter-name>CorsFilter</filter-name>
-    <filter-class>com.auction.middlewares.CorsFilter</filter-class>
+    <filter-class>auction.filters.CorsFilter</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>CorsFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-  <!-- Optional: protect everything under /api except /api/login and /api/whoami -->
-  <!--
-  <filter>
-    <filter-name>AuthFilter</filter-name>
-    <filter-class>com.auction.middlewares.AuthFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>AuthFilter</filter-name>
-    <url-pattern>/api/*</url-pattern>
-  </filter-mapping>
-  -->
-
   <!-- Servlets -->
   <servlet>
     <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>com.auction.controllers.LoginServlet</servlet-class>
+    <servlet-class>auction.servlets.LoginServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/api/login</url-pattern>
-  </servlet-mapping>
-
-  <servlet>
-    <servlet-name>LogoutServlet</servlet-name>
-    <servlet-class>com.auction.controllers.LogoutServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>LogoutServlet</servlet-name>
-    <url-pattern>/api/logout</url-pattern>
-  </servlet-mapping>
-
-  <servlet>
-    <servlet-name>WhoAmIServlet</servlet-name>
-    <servlet-class>com.auction.controllers.WhoAmIServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>WhoAmIServlet</servlet-name>
-    <url-pattern>/api/whoami</url-pattern>
   </servlet-mapping>
 
 </web-app>
