--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -25,9 +25,9 @@
 
     <!-- MySQL driver -->
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-j</artifactId>
-      <version>8.4.0</version>
+        <groupId>com.mysql</groupId>
+        <artifactId>mysql-connector-j</artifactId>
+        <version>8.0.33</version>
     </dependency>
 
     <!-- .env support -->
